--- a/docker_compose_local_v5.yml
+++ b/docker_compose_local_v5.yml
@@ -3,7 +3,7 @@ services:
   postgres:
     image: postgres:9.6
     volumes:
-      - //d/BigDataPlayground/local/arf_pg_data:/var/lib/postgresql/data
+      - /d/BigDataPlayground/local_v5/arf_pg_data:/var/lib/postgresql/data
     ports:
       - "5433"
     environment:
@@ -13,45 +13,48 @@ services:
       PGPORT: 5433
     restart: always
   scheduler:
+    image: docker.io/anajaparidze/airflow_spark:airflow_2.1.4-spark_2.4.7
     depends_on:
       - postgres
-    build: &build
-      context: .
-      dockerfile: Dockerfile
-      args:
-        AIRFLOW_VERSION: "2.1"
-        SPARK_VERSION: "2.4.7"
-        HADOOP_VERSION: "3.1.0"
-        SCALA_VERSION: "2.12"
-        PYTHON_VERSION: "3.7"
-        SQLALCHEMY_VERSION: "1.3"
-    command: ["bash", "-c", "python test_db_conn.py && airflow db init && airflow scheduler"]
-    volumes:
-      - //d/BigDataPlayground/local/dags:/airflow/dags
-      - //d/BigDataPlayground/local/jobs:/airflow/jobs
-      - //d/BigDataPlayground/local/data:/airflow/data    
-      - airflow_logs:/airflow/logs/  
-    environment: &environment
+    ports:
+      - "5433"
+    environment:
       AIRFLOW__CORE__FERNET_KEY: 8NE6O6RcTJpxcCkuKxOHOExzIJkXkeJKbRie03a69dI=
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql://airflow:airflow@postgres:5433/airflow
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor      
+      PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python
     restart: always
+    command: ["bash", "-c", "echo '### Testing connection... '
+                            && python test_db_conn.py 
+                            && echo '### Running DB Init... '
+                            && airflow db init 
+                            && echo '### Starting scheduler... '
+                            && airflow scheduler"]
+    volumes:
+      - /d/BigDataPlayground/local_v5/dags:/airflow/dags
+      - /d/BigDataPlayground/local_v5/jobs:/airflow/jobs
+      - /d/BigDataPlayground/local_v5/data:/airflow/data    
+      - airflow_logs:/airflow/logs/  
   webserver:
+    image: docker.io/anajaparidze/airflow_spark:airflow_2.1.4-spark_2.4.7
     depends_on:
-      - postgres
-    build: *build
-    command: ["bash", "-c", "sleep 7 && airflow webserver"]
+      - scheduler
+    command: ["bash", "-c", "airflow webserver"]
     ports:
       - 8080:8080
     volumes:
       - airflow_logs:/airflow/logs/
-    environment: *environment
+    environment:
+      AIRFLOW__CORE__FERNET_KEY: 8NE6O6RcTJpxcCkuKxOHOExzIJkXkeJKbRie03a69dI=
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql://airflow:airflow@postgres:5433/airflow
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor      
+      PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python
     restart: always
 
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     volumes:
-      - //d/BigDataPlayground/local/namenode:/hadoop/dfs/name
+      - /d/BigDataPlayground/local_v5/namenode:/hadoop/dfs/name
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -62,7 +65,7 @@ services:
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     volumes:
-      - //d/BigDataPlayground/local/datanode:/hadoop/dfs/data
+      - //d/BigDataPlayground/local_v5/datanode:/hadoop/dfs/data
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -105,7 +108,7 @@ services:
   huedb:
     image: postgres:12.1-alpine
     volumes:
-      - //d/BigDataPlayground/local/hive_pg_data:/var/lib/postgresql/data
+      - //d/BigDataPlayground/local_v5/hive_pg_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     env_file:
@@ -124,10 +127,27 @@ services:
     links:
       - huedb
 
+  zookeeper:
+    image: docker.io/bitnami/zookeeper:3.8
+    ports:
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: docker.io/bitnami/kafka:3.2
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+      
   pyspark-notebook:
       image: kublr/pyspark-notebook:spark-2.4.0-hadoop-2.6
       volumes:
-        - //d/BigDataPlayground/local/notebooks:/jupyter
+        - //d/BigDataPlayground/local_v5/notebooks:/jupyter
       user: root
       container_name: pyspark-notebook
       hostname: pyspark-notebook
@@ -136,12 +156,11 @@ services:
         - "4040-4050:4040-4050"
       environment:
         JUPYTER_TOKEN: token
-      
 volumes:
   # pg_data: 
   #   driver: local
   #   driver_opts:
   #     type: none
   #     o: bind
-  #     device: //d/BigDataPlayground/local/hive_pg_data
+  #     device: /d/BigDataPlayground/local_v5/hive_pg_data
   airflow_logs: {}
